tests/snapshots/json_contract_snapshots__index_empty_summary_contract.snap
---
source: tests/json_contract_snapshots.rs
expression: pretty
---
{
  "added": 0,
  "duration_ms": 0,
  "embeddings": {
    "status": "[feature-dependent]"
  },
  "errors": [],
  "force": false,
  "index_dir": "[index-dir]",
  "messages_indexed": 0,
  "providers": [],
  "removed": 0,
  "sessions_total": 0,
  "status": "ok",
  "unchanged": 0,
  "updated": 0
}
